Fix alignment of buttons in navmenu

--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -25,8 +25,6 @@
 }
 
 .nav-menu {
-    position: absolute;
-    left: -1vmin;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     width: 20vw;
